--- a/source/posts/2015/01-11-podcast-03-01.md.erb
+++ b/source/posts/2015/01-11-podcast-03-01.md.erb
@@ -3,11 +3,11 @@ title: "01 выпуск 03 сезона. Релиз Ruby 2.2.0, rubybench.org, G
 date: 2015-01-11
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/87/file/podfm_rwpod_my_43.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/02.43/0243.mp3"
+audio_url: "http://rwpod.podfm.ru/my/88/file/podfm_rwpod_my_1_88.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/03.01/0301.mp3"
 audio_format: "audio/mpeg"
-audio_length: 67071705
-duration: "01:09:46"
+audio_length: 63626051
+duration: "01:06:10"
 small_icon: mic
 main_image: "/images/static/03/0301.png"
 ---
@@ -23,8 +23,8 @@ main_image: "/images/static/03/0301.png"
 
 ## JavaScript
 
- - [Style Guide Best Practices](http://bradfrost.com/blog/post/style-guide-best-practices/)
- - [Titon - a collection of extensible front-end user interface components for the responsive and mobile web](http://titon.io/en/), [EmberScript - Ember.js-Infused CoffeeScript](http://emberscript.com/) и [React Templates](http://wix.github.io/react-templates/)
+ - [Style Guide Best Practices](http://bradfrost.com/blog/post/style-guide-best-practices/) и [Titon - a collection of extensible front-end user interface components for the responsive and mobile web](http://titon.io/en/)
+ - [EmberScript - Ember.js-Infused CoffeeScript](http://emberscript.com/) и [React Templates](http://wix.github.io/react-templates/)
  - [Sheetsee.js is a library for connecting Google Spreadsheets to a website and visualizing the information](http://jlord.us/sheetsee.js/), [Particles.js](http://vincentgarreau.com/particles.js/) и [Select3](http://arendjr.github.io/select3/)
  - [JSbooks - free JavaScript books](http://jsbooks.revolunet.com/) и [Adaptive Web Design](http://adaptivewebdesign.info/1st-edition/)
 
