--- a/source/posts/2015/01-18-podcast-03-02.md.erb
+++ b/source/posts/2015/01-18-podcast-03-02.md.erb
@@ -16,10 +16,11 @@ main_image: "/images/static/03/0302.png"
 
 ## Ruby
 
-
+ - [Code Quality: Metrics That Matter](http://chriskottom.com/blog/2015/01/code-quality-metrics-that-matter/)
 
 ## JavaScript
 
+ - [In-browser Redis](http://narma.github.io/2015/redis-in-browser/)
  - [Hyhyhy - a tool for creating nice looking HTML5 presentations](http://maciejczyzewski.me/hyhyhy/) и [Mozilla Presentation Boilerpalte](http://mte90.github.io/Mozilla-Presentation-Boilerplate/)
  - [Sass Guidelines](http://hugogiraudel.com/2015/01/07/introducing-sass-guidelines/)
  - [The 300 ms Click Delay and iOS 8](http://developer.telerik.com/featured/300-ms-click-delay-ios-8/)
