--- a/source/posts/2015/01-18-podcast-03-02.md.erb
+++ b/source/posts/2015/01-18-podcast-03-02.md.erb
@@ -27,6 +27,7 @@ main_image: "/images/static/03/0302.png"
  - [The 300 ms Click Delay and iOS 8](http://developer.telerik.com/featured/300-ms-click-delay-ios-8/)
  - [Z3d.js](http://nathanepstein.github.io/jekyll/update/2015/01/11/z3d.html)
  - [6to5 turns ES6+ code into vanilla ES5](http://6to5.org/)
+ - [UX Myths](http://uxmyths.com/)
 
 
 READMORE
