--- a/source/posts/2015/01-18-podcast-03-02.md.erb
+++ b/source/posts/2015/01-18-podcast-03-02.md.erb
@@ -17,6 +17,7 @@ main_image: "/images/static/03/0302.png"
 ## Ruby
 
  - [Code Quality: Metrics That Matter](http://chriskottom.com/blog/2015/01/code-quality-metrics-that-matter/)
+ - [Railsbox](https://railsbox.io/)
 
 ## JavaScript
 
