--- a/source/posts/2015/01-18-podcast-03-02.md.erb
+++ b/source/posts/2015/01-18-podcast-03-02.md.erb
@@ -16,20 +16,22 @@ main_image: "/images/static/03/0302.png"
 
 ## Ruby
 
- - [Code Quality: Metrics That Matter](http://chriskottom.com/blog/2015/01/code-quality-metrics-that-matter/)
- - [Railsbox](https://railsbox.io/)
+ - [Debugging Super Methods with Ruby 2.2](http://engineering.heroku.com/blogs/2014-01-14-debugging-super-methods-ruby22) и [Code Quality: Metrics That Matter](http://chriskottom.com/blog/2015/01/code-quality-metrics-that-matter/)
+ - [Rbkit is a profiler built with ease of use in mind](http://rbkit.codemancers.com/) и [Railsbox](https://railsbox.io/)
+ - [Using Go to improve your Ruby application's performance](https://antoine.finkelstein.fr/go-in-ruby/) и [Recalculate counter cache columns in Rails](https://www.krautcomputing.com/blog/2015/01/13/recalculate-counter-cache-columns-in-rails/)
+ - [Why does Ruby have blocks?](http://devblog.avdi.org/2015/01/16/why-does-ruby-have-blocks/), [To be like Gauguin](http://blog.lunarlogic.io/2015/to-be-like-gauguin/) и [Octodown - github markdown previewing straight from your shell](https://github.com/ianks/octodown)
 
 ## JavaScript
 
- - [IO.js 1.0.1](https://iojs.org/)
- - [In-browser Redis](http://narma.github.io/2015/redis-in-browser/)
+ - Релизы [IO.js 1.0.2](https://iojs.org/) и [TypeScript 1.4](http://blogs.msdn.com/b/typescript/archive/2015/01/16/announcing-typescript-1-4.aspx)
+ - [Sass Guidelines](http://hugogiraudel.com/2015/01/07/introducing-sass-guidelines/) и [In-browser Redis](http://narma.github.io/2015/redis-in-browser/)
  - [Hyhyhy - a tool for creating nice looking HTML5 presentations](http://maciejczyzewski.me/hyhyhy/) и [Mozilla Presentation Boilerpalte](http://mte90.github.io/Mozilla-Presentation-Boilerplate/)
- - [Sass Guidelines](http://hugogiraudel.com/2015/01/07/introducing-sass-guidelines/)
- - [The 300 ms Click Delay and iOS 8](http://developer.telerik.com/featured/300-ms-click-delay-ios-8/)
- - [Z3d.js](http://nathanepstein.github.io/jekyll/update/2015/01/11/z3d.html)
- - [6to5 turns ES6+ code into vanilla ES5](http://6to5.org/)
- - [UX Myths](http://uxmyths.com/)
+ - [The 300 ms Click Delay and iOS 8](http://developer.telerik.com/featured/300-ms-click-delay-ios-8/) и [UX Myths](http://uxmyths.com/)
+ - [6to5 turns ES6+ code into vanilla ES5](http://6to5.org/) и [TheaterJS — автоматический набор текста, имитирующий поведение человека](http://gabinaureche.com/TheaterJS/)
 
+## Обсуждаем
+
+ - Мастер класс [PostgreSQL - настраиваем и масштабируем](http://smartme.com.ua/PostgreSQL). Используйте промокод **rwpod_SM** для получения 10% скидки.
 
 READMORE
 
