--- a/source/posts/2015/01-19-podcast-03-02.md.erb
+++ b/source/posts/2015/01-19-podcast-03-02.md.erb
@@ -1,13 +1,13 @@
 ---
-title: "02 выпуск 03 сезона.  и прочее"
-date: 2015-01-18
+title: "02 выпуск 03 сезона. Debugging Super Methods with Ruby 2.2, Rbkit, Railsbox, IO.js 1.0.2, TypeScript 1.4, Hyhyhy и прочее"
+date: 2015-01-19
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/88/file/podfm_rwpod_my_1_88.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/03.01/0301.mp3"
+audio_url: "http://rwpod.podfm.ru/my/89/file/podfm_rwpod_my_2_89.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/03.02/0302.mp3"
 audio_format: "audio/mpeg"
-audio_length: 63626051
-duration: "01:06:10"
+audio_length: 61155602
+duration: "01:03:36"
 small_icon: mic
 main_image: "/images/static/03/0302.png"
 ---
