--- a/source/posts/2015/01-25-podcast-03-03.md.erb
+++ b/source/posts/2015/01-25-podcast-03-03.md.erb
@@ -22,6 +22,8 @@ main_image: "/images/static/03/0303.png"
  - [Tuning Ruby's Global Method Cache](http://www.shopify.com/technology/16777156-tuning-rubys-global-method-cache)
  - [Tail Call Optimization in Ruby: Deep Dive](http://blog.tdg5.com/tail-call-optimization-ruby-deep-dive/)
  - [Debugging Ruby: killing puts one pry at a time](https://dnlserrano.github.io/2015/01/11/debugging-ruby/)
+ - [Bundler doesn't reinstall gem after changing its source](https://github.com/bundler/bundler/issues/3360)
+ - [Single Responsibility Principle: Why Does it Matter?](http://blog.8thlight.com/elizabeth-engelman/2015/01/22/single-responsibility-principle-why-does-it-matter.html)
 
 ## JavaScript
 
@@ -31,6 +33,7 @@ main_image: "/images/static/03/0303.png"
  - [Matter.js - html5 javascript physics engine](http://brm.io/matter-js/)
  - [Riot.js - a React-like user interface library](https://muut.com/riotjs/)
  - [Sortable — is a JavaScript library for reorderable drag-and-drop lists on modern browsers and touch devices](http://rubaxa.github.io/Sortable/)
+ - [Leaflet Tips and Tricks (free book)](https://leanpub.com/leaflet-tips-and-tricks/read)
 
 READMORE
 
