--- a/source/posts/2015/02-08-podcast-03-05.md.erb
+++ b/source/posts/2015/02-08-podcast-03-05.md.erb
@@ -28,6 +28,7 @@ main_image: "/images/static/03/0305.png"
 
 ## JavaScript
 
+ - [Node v0.12.0](http://blog.nodejs.org/2015/02/06/node-v0-12-0-stable/)
  - [PhantomJS 2.0](http://phantomjs.org/release-2.0.html)
  - [First Impressions using React Native](http://jlongster.com/First-Impressions-using-React-Native)
  - [Google SoundScript: faster OOP for JavaScript](http://www.2ality.com/2015/02/soundscript.html)
