--- a/source/posts/2015/02-10-podcast-03-05.md.erb
+++ b/source/posts/2015/02-10-podcast-03-05.md.erb
@@ -1,6 +1,6 @@
 ---
 title: "05 выпуск 03 сезона.  и прочее"
-date: 2015-02-09
+date: 2015-02-10
 tags:
  - podcasts
 audio_url: "http://rwpod.podfm.ru/my/91/file/podfm_rwpod_my_3_91.mp3"
@@ -35,6 +35,8 @@ main_image: "/images/static/03/0305.png"
  - [Popularity-driven development](http://ferrante.pl/frontend/javascript/popularity-driven-development/)
  - [Smooth CoffeeScript (free book)](http://autotelicum.github.io/Smooth-CoffeeScript/)
  - [lz-string: JavaScript compression, fast!](http://pieroxy.net/blog/pages/lz-string/index.html)
+ - [Let’s Write Fast JavaScript](https://medium.com/the-javascript-collection/lets-write-fast-javascript-2b03c5575d9e)
+ - [Takeaways from React.js Conf 2015](http://kevinold.com/2015/01/31/takeaways-from-reactjs-conf-2015.html)
 
 READMORE
 
