--- a/source/posts/2015/02-10-podcast-03-05.md.erb
+++ b/source/posts/2015/02-10-podcast-03-05.md.erb
@@ -26,7 +26,7 @@ main_image: "/images/static/03/0305.png"
  - Релизы [Node v0.12.0](http://blog.nodejs.org/2015/02/06/node-v0-12-0-stable/) и [PhantomJS 2.0](http://phantomjs.org/release-2.0.html)
  - [First Impressions using React Native](http://jlongster.com/First-Impressions-using-React-Native) и [Takeaways from React.js Conf 2015](http://kevinold.com/2015/01/31/takeaways-from-reactjs-conf-2015.html)
  - [Google SoundScript: faster OOP for JavaScript](http://www.2ality.com/2015/02/soundscript.html) и [Popularity-driven development](http://ferrante.pl/frontend/javascript/popularity-driven-development/)
- - [Let’s Write Fast JavaScript](https://medium.com/the-javascript-collection/lets-write-fast-javascript-2b03c5575d9e), [lz-string: JavaScript compression, fast!](http://pieroxy.net/blog/pages/lz-string/index.html) и [Smooth CoffeeScript (free book)](http://autotelicum.github.io/Smooth-CoffeeScript/)
+ - [Let’s Write Fast JavaScript](https://medium.com/the-javascript-collection/lets-write-fast-javascript-2b03c5575d9e) и [lz-string: JavaScript compression, fast!](http://pieroxy.net/blog/pages/lz-string/index.html)
 
 READMORE
 
