--- a/source/posts/2015/02-16-podcast-03-06.md.erb
+++ b/source/posts/2015/02-16-podcast-03-06.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "06 выпуск 03 сезона.  и прочее"
+title: "06 выпуск 03 сезона. Weird stuff with hashes, Static is the New Dynamic, Predicting Likes, Web Font Loader и прочее"
 date: 2015-02-16
 tags:
  - podcasts
@@ -16,26 +16,17 @@ main_image: "/images/static/03/0306.png"
 
 ## Ruby
 
- - [Rails Polymorphic Associations](http://6ftdan.com/allyourdev/2015/02/10/rails-polymorphic-models/)
- - [Low hanging fruits for better SQL performance in Rails](http://www.rubyonrails365.com/low-hanging-fruits-for-better-sql-performance-in-rails/)
- - [Using insensitive-case columns in PostgreSQL with citext](http://nandovieira.com/using-insensitive-case-columns-in-postgresql-with-citext)
- - [The Ruby Newbies community](http://rubynewbies.org/)
- - [Static is the New Dynamic - Jekyll is the New Ruby Killer App](https://github.com/geraldb/talks/blob/master/static.md)
- - [A Fast Blogging Solution: Building a Simple Jekyll Blog](https://blog.engineyard.com/2015/fast-blogging-solution-building-simple-jekyll-blog)
- - [Weird stuff with hashes](http://tenderlovemaking.com/2015/02/11/weird-stuff-with-hashes.html)
- - [New Methods in Ruby 2.2](http://www.sitepoint.com/new-methods-ruby-2-2/)
+ - [Weird stuff with hashes](http://tenderlovemaking.com/2015/02/11/weird-stuff-with-hashes.html) и [New Methods in Ruby 2.2](http://www.sitepoint.com/new-methods-ruby-2-2/)
+ - [Low hanging fruits for better SQL performance in Rails](http://www.rubyonrails365.com/low-hanging-fruits-for-better-sql-performance-in-rails/) и [Using insensitive-case columns in PostgreSQL with citext](http://nandovieira.com/using-insensitive-case-columns-in-postgresql-with-citext)
+ - [Static is the New Dynamic - Jekyll is the New Ruby Killer App](https://github.com/geraldb/talks/blob/master/static.md) и [A Fast Blogging Solution: Building a Simple Jekyll Blog](https://blog.engineyard.com/2015/fast-blogging-solution-building-simple-jekyll-blog)
+ - [Rails Polymorphic Associations](http://6ftdan.com/allyourdev/2015/02/10/rails-polymorphic-models/) и [The Ruby Newbies community](http://rubynewbies.org/)
 
 ## JavaScript
 
- - [Ember.js 1.10.0 and 1.11](http://emberjs.com/blog/2015/02/07/ember-1-10-0-released.html)
- - [Plumin.js — create and manipulate fonts using JavaScript](http://www.pluminjs.com/)
- - [HubPress - a web application to build your Blog on GitHub](http://hubpress.io/)
- - [SqueakJS - a Squeak VM in JavaScript](http://bertfreudenberg.github.io/SqueakJS/)
- - [Predicting Likes: Inside A Simple Recommendation Engine](http://www.toptal.com/algorithms/predicting-likes-inside-a-simple-recommendation-engine)
- - [Stapes.js - a little Javascript framework that does just enough](http://hay.github.io/stapes/)
- - [Reapp - hybrid apps, fast](http://reapp.io/)
- - [Texgen.js - procedural texture generator](http://texgenjs.org/)
- - [Обучающий курс "Expert ES6"](http://tagtree.io/courses/expert-es6)
+ - [Ember.js 1.10.0 и 1.11](http://emberjs.com/blog/2015/02/07/ember-1-10-0-released.html), [SqueakJS - a Squeak VM in JavaScript](http://bertfreudenberg.github.io/SqueakJS/) и [Predicting Likes: Inside A Simple Recommendation Engine](http://www.toptal.com/algorithms/predicting-likes-inside-a-simple-recommendation-engine)
+ - [Plumin.js — create and manipulate fonts using JavaScript](http://www.pluminjs.com/), [Web Font Loader](https://github.com/typekit/webfontloader) и [HubPress - a web application to build your Blog on GitHub](http://hubpress.io/)
+ - [Stapes.js - a little Javascript framework that does just enough](http://hay.github.io/stapes/) и [Reapp - hybrid apps, fast](http://reapp.io/)
+ - [Обучающий курс "Expert ES6"](http://tagtree.io/courses/expert-es6) и [Texgen.js - procedural texture generator](http://texgenjs.org/)
 
 READMORE
 
