--- a/source/posts/2015/02-17-podcast-03-06.md.erb
+++ b/source/posts/2015/02-17-podcast-03-06.md.erb
@@ -1,13 +1,13 @@
 ---
-title: "06 выпуск 03 сезона. Weird stuff with hashes, Static is the New Dynamic, Predicting Likes, Web Font Loader и прочее"
-date: 2015-02-16
+title: "06 выпуск 03 сезона. Weird stuff with hashes, Static is the New Dynamic, Predicting Likes, Web Font Loader, HubPress и прочее"
+date: 2015-02-17
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/92/file/podfm_rwpod_my_5_92.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/03.05/0305.mp3"
+audio_url: "http://rwpod.podfm.ru/my/93/file/podfm_rwpod_my_6_93.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/03.06/0306.mp3"
 audio_format: "audio/mpeg"
-audio_length: 66956516
-duration: "01:09:38"
+audio_length: 60501008
+duration: "01:02:54"
 small_icon: mic
 main_image: "/images/static/03/0306.png"
 ---
@@ -26,7 +26,7 @@ main_image: "/images/static/03/0306.png"
  - [Ember.js 1.10.0 и 1.11](http://emberjs.com/blog/2015/02/07/ember-1-10-0-released.html), [SqueakJS - a Squeak VM in JavaScript](http://bertfreudenberg.github.io/SqueakJS/) и [Predicting Likes: Inside A Simple Recommendation Engine](http://www.toptal.com/algorithms/predicting-likes-inside-a-simple-recommendation-engine)
  - [Plumin.js — create and manipulate fonts using JavaScript](http://www.pluminjs.com/), [Web Font Loader](https://github.com/typekit/webfontloader) и [HubPress - a web application to build your Blog on GitHub](http://hubpress.io/)
  - [Stapes.js - a little Javascript framework that does just enough](http://hay.github.io/stapes/) и [Reapp - hybrid apps, fast](http://reapp.io/)
- - [Обучающий курс "Expert ES6"](http://tagtree.io/courses/expert-es6) и [Texgen.js - procedural texture generator](http://texgenjs.org/)
+ - [Texgen.js - procedural texture generator](http://texgenjs.org/) и [Обучающий курс "Expert ES6"](http://tagtree.io/courses/expert-es6)
 
 READMORE
 
