--- a/source/posts/2015/02-24-podcast-03-07.md.erb
+++ b/source/posts/2015/02-24-podcast-03-07.md.erb
@@ -1,6 +1,6 @@
 ---
 title: "07 выпуск 03 сезона. Rails on Docker, Predicting Test Failures, HTTP/2, RSCSS, Relay и GraphQL, DefiantJS и прочее"
-date: 2015-02-23
+date: 2015-02-24
 tags:
  - podcasts
 audio_url: "http://rwpod.podfm.ru/my/93/file/podfm_rwpod_my_6_93.mp3"
@@ -29,6 +29,10 @@ main_image: "/images/static/03/0307.png"
  - [Terrible JavaScript Mistakes To Avoid With A Static Code Analyzer](http://www.smashingmagazine.com/2015/02/18/avoid-javascript-mistakes-with-static-code-analyzer/) и [Solving common node/io.js callback problems](https://medium.com/@ayasin/solving-common-node-io-js-callback-problems-d3d1f6049259)
  - [Vega: A Visualization Grammar](http://trifacta.github.io/vega/), [DarkLord - NodeJS Authentication Solution](http://grumpywizards.com/darklord/) и [JS2PNG - hide Javascript code inside PNG images](https://github.com/felixmaier/JS2PNG)
  - [DefiantJS - perform lightning-fast searches on JSON using XPath expressions](http://www.defiantjs.com/), [ItemSlide.js - a simple and beautiful touch carousel](http://itemslide.github.io/) и [Memory-stats.js - minimal monitor for JS Heap Size via performance.memory](https://github.com/paulirish/memory-stats.js)
+
+## Информация
+
+ - [Мастер-класс "PostgreSQL - настраиваем и масштабируем"](http://smartme.com.ua/PostgreSQL). Используйте промокод **rwpod_SM** для получения 10% скидки.
 
 READMORE
 
