--- a/source/posts/2015/03-02-podcast-03-08.md.erb
+++ b/source/posts/2015/03-02-podcast-03-08.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "08 выпуск 03 сезона. и прочее"
+title: "08 выпуск 03 сезона. Ruby 2.0.0-p643, Fast Ruby, React.rb, Shim vs Polyfill, Angularjs Performance, Docco, Polylion и прочее"
 date: 2015-03-02
 tags:
  - podcasts
@@ -16,31 +16,19 @@ main_image: "/images/static/03/0308.png"
 
 ## Ruby
 
- - Релиз [Ruby 2.0.0-p643](https://www.ruby-lang.org/en/news/2015/02/25/ruby-2-0-0-p643-is-released/)
- - [Support for Ruby 1.9.3 ends](https://www.ruby-lang.org/en/news/2015/02/23/support-for-ruby-1-9-3-has-ended/)
- - [Fast Ruby](https://github.com/JuanitoFatas/fast-ruby)
- - [Railyard - sandboxes Rails](http://anti-pattern.com/railyard)
- - [Using the Sucker Punch ruby gem to cache Stripe data in Rails](http://brandonhilkert.com/blog/using-the-sucker-punch-ruby-gem-to-cache-stripe-data-in-rails/)
- - [Why blocks make Ruby methods 439% slower](https://www.omniref.com/ruby/2.2.0/symbols/Proc/yield?#annotation=4087638&line=711)
- - [4 Ruby methods that are an order of magnitude faster, and 22 other optimizations](https://www.omniref.com/github/JuanitoFatas/fast-ruby/HEAD/files/Rakefile?#annotation=4087643&line=1)
- - [Service Objects in Rails](http://cored.github.io/blog/2015/02/26/service-objects-in-rails/)
- - [Hacking S-expressions into Ruby](https://sonnym.github.io/2015/02/26/hacking-s-expressions-into-ruby/)
- - [Replacing the Rails asset pipeline with Gulp](https://bugsnag.com/blog/replacing-the-rails-asset-pipeline-with-gulp)
- - [React.rb - an Opal Ruby wrapper for React.js](https://github.com/zetachang/react.rb)
+ - Релиз [Ruby 2.0.0-p643](https://www.ruby-lang.org/en/news/2015/02/25/ruby-2-0-0-p643-is-released/), [Support for Ruby 1.9.3 ends](https://www.ruby-lang.org/en/news/2015/02/23/support-for-ruby-1-9-3-has-ended/) и [Fast Ruby](https://github.com/JuanitoFatas/fast-ruby)
+ - [Why blocks make Ruby methods 439% slower](https://www.omniref.com/ruby/2.2.0/symbols/Proc/yield?#annotation=4087638&line=711) и [4 Ruby methods that are an order of magnitude faster, and 22 other optimizations](https://www.omniref.com/github/JuanitoFatas/fast-ruby/HEAD/files/Rakefile?#annotation=4087643&line=1)
+ - [Service Objects in Rails](http://cored.github.io/blog/2015/02/26/service-objects-in-rails/) и [Hacking S-expressions into Ruby](https://sonnym.github.io/2015/02/26/hacking-s-expressions-into-ruby/)
+ - [Using the Sucker Punch ruby gem to cache Stripe data in Rails](http://brandonhilkert.com/blog/using-the-sucker-punch-ruby-gem-to-cache-stripe-data-in-rails/) и [Replacing the Rails asset pipeline with Gulp](https://bugsnag.com/blog/replacing-the-rails-asset-pipeline-with-gulp)
+ - [Railyard - sandboxes Rails](http://anti-pattern.com/railyard) и [React.rb - an Opal Ruby wrapper for React.js](https://github.com/zetachang/react.rb)
 
 ## JavaScript
 
- - [Lightroom on React.js](https://v2.polarr.co/)
- - [Implement text editor DOM updates manually instead of via React](https://github.com/atom/atom/pull/5624)
- - [Audio Podcasts in Javascript and Web Developer](http://www.airingpods.com/cats/javascript-and-web-developer/)
- - [The Evolution of Airbnb's Frontend (slides)](http://www.slideshare.net/spikebrehm/the-evolution-of-airbnbs-frontend)
- - [Angularjs Performance (slides)](http://www.slideshare.net/straker503/angularjs-performance)
- - [Choosing your next best tool](https://medium.com/@kbariotis/choosing-your-next-best-tool-fba96eb19a7f)
- - [Docco - a quick-and-dirty documentation generator](http://jashkenas.github.io/docco/)
- - [JavaScript: Shim vs Polyfill](http://blog.respoke.io/post/111278536998/javascript-shim-vs-polyfill)
- - [SVG Scrolling Animation Triggered By ScrollMagic](https://ihatetomatoes.net/svg-scrolling-animation-triggered-scrollmagic/)
- - [Polylion — создание полигонального льва с помощью SVG](https://css-tricks.com/polylion/)
- - [JavaScript ❤ Unicode](http://fluentconf.com/javascript-html-2015/public/content/2015/02/18-javascript-loves-unicode)
+ - [Lightroom on React.js](https://v2.polarr.co/) и [Implement text editor DOM updates manually instead of via React](https://github.com/atom/atom/pull/5624)
+ - [JavaScript: Shim vs Polyfill](http://blog.respoke.io/post/111278536998/javascript-shim-vs-polyfill) и [Choosing your next best tool](https://medium.com/@kbariotis/choosing-your-next-best-tool-fba96eb19a7f)
+ - [The Evolution of Airbnb's Frontend (slides)](http://www.slideshare.net/spikebrehm/the-evolution-of-airbnbs-frontend) и [Angularjs Performance (slides)](http://www.slideshare.net/straker503/angularjs-performance)
+ - [Docco - a quick-and-dirty documentation generator](http://jashkenas.github.io/docco/), [SVG Scrolling Animation Triggered By ScrollMagic](https://ihatetomatoes.net/svg-scrolling-animation-triggered-scrollmagic/) и [Polylion — создание полигонального льва с помощью SVG](https://css-tricks.com/polylion/)
+ - [JavaScript ❤ Unicode](http://fluentconf.com/javascript-html-2015/public/content/2015/02/18-javascript-loves-unicode) и [Audio Podcasts in Javascript and Web Developer](http://www.airingpods.com/cats/javascript-and-web-developer/)
 
 READMORE
 
