--- a/source/posts/2015/03-02-podcast-03-08.md.erb
+++ b/source/posts/2015/03-02-podcast-03-08.md.erb
@@ -16,7 +16,7 @@ main_image: "/images/static/03/0308.png"
 
 ## Ruby
 
- - Релиз [Ruby 2.0.0-p643](https://www.ruby-lang.org/en/news/2015/02/25/ruby-2-0-0-p643-is-released/), [Support for Ruby 1.9.3 ends](https://www.ruby-lang.org/en/news/2015/02/23/support-for-ruby-1-9-3-has-ended/) и [Fast Ruby](https://github.com/JuanitoFatas/fast-ruby)
+ - Релиз [Ruby 2.0.0-p643](https://www.ruby-lang.org/en/news/2015/02/25/ruby-2-0-0-p643-is-released/), [Ruby 2.2.1](https://www.ruby-lang.org/en/news/2015/03/03/ruby-2-2-1-released/), [Support for Ruby 1.9.3 ends](https://www.ruby-lang.org/en/news/2015/02/23/support-for-ruby-1-9-3-has-ended/) и [Fast Ruby](https://github.com/JuanitoFatas/fast-ruby)
  - [Why blocks make Ruby methods 439% slower](https://www.omniref.com/ruby/2.2.0/symbols/Proc/yield?#annotation=4087638&line=711) и [4 Ruby methods that are an order of magnitude faster, and 22 other optimizations](https://www.omniref.com/github/JuanitoFatas/fast-ruby/HEAD/files/Rakefile?#annotation=4087643&line=1)
  - [Service Objects in Rails](http://cored.github.io/blog/2015/02/26/service-objects-in-rails/) и [Hacking S-expressions into Ruby](https://sonnym.github.io/2015/02/26/hacking-s-expressions-into-ruby/)
  - [Using the Sucker Punch ruby gem to cache Stripe data in Rails](http://brandonhilkert.com/blog/using-the-sucker-punch-ruby-gem-to-cache-stripe-data-in-rails/) и [Replacing the Rails asset pipeline with Gulp](https://bugsnag.com/blog/replacing-the-rails-asset-pipeline-with-gulp)
