--- a/source/posts/2015/03-16-podcast-03-10.md.erb
+++ b/source/posts/2015/03-16-podcast-03-10.md.erb
@@ -16,9 +16,16 @@ main_image: "/images/static/03/0310.png"
 
 ## Ruby
 
+ - [InfraRuby 3.6 - a statically-typed Ruby which compiles into Java Bytecode](http://infraruby.com/blog/infraruby-3-6-released)
+ - [Rails 4 Performance Tips](http://coding-is-art.com/rails-4-performance-tips/)
+ - [Numeric Bases and Defining Your Own](http://6ftdan.com/allyourdev/2015/03/06/numeric-bases-and-defining-your-own/)
+ - [Ignore query strings in Ruby on Rails caching with rack-cache](http://teotti.com/ignore-query-strings-in-ruby-on-rails-caching-with-rack-cache/)
+
 
 ## JavaScript
 
+ - [React v0.13](http://facebook.github.io/react/blog/2015/03/10/react-v0.13.html)
+ - [Churn](http://pothibo.com/2015/3/churn)
  - [Side Effects in CSS](http://philipwalton.com/articles/side-effects-in-css/)
 
 READMORE
