--- a/source/posts/2015/03-16-podcast-03-10.md.erb
+++ b/source/posts/2015/03-16-podcast-03-10.md.erb
@@ -27,6 +27,7 @@ main_image: "/images/static/03/0310.png"
  - [React v0.13](http://facebook.github.io/react/blog/2015/03/10/react-v0.13.html)
  - [Churn](http://pothibo.com/2015/3/churn)
  - [Side Effects in CSS](http://philipwalton.com/articles/side-effects-in-css/)
+ - [Taming the asynchronous beast with ES7](http://pouchdb.com/2015/03/05/taming-the-async-beast-with-es7.html)
 
 READMORE
 
