--- a/source/posts/2015/03-16-podcast-03-10.md.erb
+++ b/source/posts/2015/03-16-podcast-03-10.md.erb
@@ -20,7 +20,7 @@ main_image: "/images/static/03/0310.png"
  - [Rails 4 Performance Tips](http://coding-is-art.com/rails-4-performance-tips/)
  - [Numeric Bases and Defining Your Own](http://6ftdan.com/allyourdev/2015/03/06/numeric-bases-and-defining-your-own/)
  - [Ignore query strings in Ruby on Rails caching with rack-cache](http://teotti.com/ignore-query-strings-in-ruby-on-rails-caching-with-rack-cache/)
-
+ - [The Recipe for the World's Largest Rails Monolith](https://speakerdeck.com/a_matsuda/the-recipe-for-the-worlds-largest-rails-monolith)
 
 ## JavaScript
 
