--- a/source/posts/2015/03-17-podcast-03-10.md.erb
+++ b/source/posts/2015/03-17-podcast-03-10.md.erb
@@ -28,6 +28,10 @@ main_image: "/images/static/03/0310.png"
  - [ArchieML - a structured text format optimized for human writability](http://archieml.org/), [LocalFont - Implement localStorage web font caching in seconds](http://jaicab.com/localFont/) и [CSS Sans - a font made only with CSS](http://yusugomori.com/projects/css-sans/fonts)
  - [Side Effects in CSS](http://philipwalton.com/articles/side-effects-in-css/) и [Выразительный Javascript (перевод на русский)](http://karmazzin.gitbooks.io/eloquentjavascript_ru/)
 
+## Обсуждение
+
+ - [Слайды с мастер-класса "PostgreSQL - настраиваем и масштабируем"](http://leopard.in.ua/presentations/smartme_postgresql_2015/index.html)
+
 READMORE
 
 <%= audio_tag %>
