--- a/source/posts/2015/03-23-podcast-03-11.md.erb
+++ b/source/posts/2015/03-23-podcast-03-11.md.erb
@@ -17,7 +17,7 @@ main_image: "/images/static/03/0311.png"
 ## Ruby
 
  - [Using Neo4j with Ruby on Rails](http://blog.diatomenterprises.com/rails-and-neo4j/) и [Simple Neural Network implementation in Ruby via the nmatrix gem](http://www.rubylab.io/2015/03/18/simple-neural-network-implenentation-in-ruby/)
- - [Reading Rails - Time Travel](http://www.monkeyandcrow.com/blog/reading_rails_time_travel/)
+ - [Reading Rails - Time Travel](http://www.monkeyandcrow.com/blog/reading_rails_time_travel/) и [No Date.today? It's DateTime!](http://www.bignerdranch.com/blog/no-date-today-its-datetime/)
 
 ## JavaScript
 
