--- a/source/posts/2015/03-23-podcast-03-11.md.erb
+++ b/source/posts/2015/03-23-podcast-03-11.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "11 выпуск 03 сезона.  и прочее"
+title: "11 выпуск 03 сезона. Ruby Together, Simple Neural Network, Regression Driven Tests, Textures.js, MuJS, Hamsa и прочее"
 date: 2015-03-23
 tags:
  - podcasts
@@ -16,13 +16,17 @@ main_image: "/images/static/03/0311.png"
 
 ## Ruby
 
- - [Using Neo4j with Ruby on Rails](http://blog.diatomenterprises.com/rails-and-neo4j/) и [Simple Neural Network implementation in Ruby via the nmatrix gem](http://www.rubylab.io/2015/03/18/simple-neural-network-implenentation-in-ruby/)
+ - [Ruby Together](https://rubytogether.org/) ([подробнее на русском](http://habrahabr.ru/post/253703/)), [Simple Neural Network implementation in Ruby via the nmatrix gem](http://www.rubylab.io/2015/03/18/simple-neural-network-implenentation-in-ruby/) и [Using Neo4j with Ruby on Rails](http://blog.diatomenterprises.com/rails-and-neo4j/)
  - [Reading Rails - Time Travel](http://www.monkeyandcrow.com/blog/reading_rails_time_travel/) и [No Date.today? It's DateTime!](http://www.bignerdranch.com/blog/no-date-today-its-datetime/)
+ - [Regression Driven Tests](http://jdurand.com/blog/2015/03/02/regression-driven-tests/) и [Why Feature Testing is Important](https://netguru.co/blog/why-feature-testing-important)
+ - [Ruby Timeout, how does it even work?](http://flushentitypacket.github.io/ruby/2015/02/21/ruby-timeout-how-does-it-even-work.html) и [Tracking down unused templates](http://blog.arkency.com/2015/03/tracking-down-unused-templates/)
 
 ## JavaScript
 
- - [MuJS is a lightweight Javascript interpreter designed for embedding in other software to extend them with scripting capabilities](http://mujs.com/)
- - [Textures.js - SVG patterns for Data Visualization](http://riccardoscalco.github.io/textures/)
+ - [SVG Tools And Resources You Might Want To See](http://www.designyourway.net/blog/resources/svg-tools-and-resources-you-might-want-to-see/) и [Textures.js - SVG patterns for Data Visualization](http://riccardoscalco.github.io/textures/)
+ - [MuJS is a lightweight Javascript interpreter designed for embedding in other software to extend them with scripting capabilities](http://mujs.com/) и [Motion sensing using the doppler effect](http://danielrapp.github.io/doppler/)
+ - [Hamsa - a dead simple, data-binding and observable model](http://gethamsa.com/) и [Simple Sass library for adding any flag to your website](http://www.dthms.com/sassy-flags.php)
+ - [Your First Meteor Application (free book)](http://meteortips.com/) и [We Will All Be Game Programmers (video)](https://www.youtube.com/watch?v=avwDj3KRuLc)
 
 
 READMORE
