--- a/source/posts/2015/03-23-podcast-03-11.md.erb
+++ b/source/posts/2015/03-23-podcast-03-11.md.erb
@@ -16,7 +16,8 @@ main_image: "/images/static/03/0311.png"
 
 ## Ruby
 
- - [Ruby Together](https://rubytogether.org/) ([подробнее на русском](http://habrahabr.ru/post/253703/)), [Simple Neural Network implementation in Ruby via the nmatrix gem](http://www.rubylab.io/2015/03/18/simple-neural-network-implenentation-in-ruby/) и [Using Neo4j with Ruby on Rails](http://blog.diatomenterprises.com/rails-and-neo4j/)
+ - Релизы [Rails: 4.2.1, 4.1.10](http://weblog.rubyonrails.org/2015/3/21/this-week-in-rails-4-2-1-4-1-10-new-test-runner-and-more/) и [Ruby Together](https://rubytogether.org/) ([подробнее на русском](http://habrahabr.ru/post/253703/))
+ - [Simple Neural Network implementation in Ruby via the nmatrix gem](http://www.rubylab.io/2015/03/18/simple-neural-network-implenentation-in-ruby/) и [Using Neo4j with Ruby on Rails](http://blog.diatomenterprises.com/rails-and-neo4j/)
  - [Reading Rails - Time Travel](http://www.monkeyandcrow.com/blog/reading_rails_time_travel/) и [No Date.today? It's DateTime!](http://www.bignerdranch.com/blog/no-date-today-its-datetime/)
  - [Regression Driven Tests](http://jdurand.com/blog/2015/03/02/regression-driven-tests/) и [Why Feature Testing is Important](https://netguru.co/blog/why-feature-testing-important)
  - [Ruby Timeout, how does it even work?](http://flushentitypacket.github.io/ruby/2015/02/21/ruby-timeout-how-does-it-even-work.html) и [Tracking down unused templates](http://blog.arkency.com/2015/03/tracking-down-unused-templates/)
