--- a/source/posts/2015/03-23-podcast-03-11.md.erb
+++ b/source/posts/2015/03-23-podcast-03-11.md.erb
@@ -24,9 +24,10 @@ main_image: "/images/static/03/0311.png"
 
 ## JavaScript
 
- - [SVG Tools And Resources You Might Want To See](http://www.designyourway.net/blog/resources/svg-tools-and-resources-you-might-want-to-see/) и [Textures.js - SVG patterns for Data Visualization](http://riccardoscalco.github.io/textures/)
+
+ - [Run Chrome Apps on Mobile Using Apache Cordova](https://developer.chrome.com/apps/chrome_apps_on_mobile) и [Hamsa - a dead simple, data-binding and observable model](http://gethamsa.com/)
  - [MuJS is a lightweight Javascript interpreter designed for embedding in other software to extend them with scripting capabilities](http://mujs.com/) и [Motion sensing using the doppler effect](http://danielrapp.github.io/doppler/)
- - [Hamsa - a dead simple, data-binding and observable model](http://gethamsa.com/) и [Simple Sass library for adding any flag to your website](http://www.dthms.com/sassy-flags.php)
+ - [SVG Tools And Resources You Might Want To See](http://www.designyourway.net/blog/resources/svg-tools-and-resources-you-might-want-to-see/) и [Textures.js - SVG patterns for Data Visualization](http://riccardoscalco.github.io/textures/)
  - [AniCollection - коллекция CSS-анимаций](http://anicollection.github.io/) и [We Will All Be Game Programmers (video)](https://www.youtube.com/watch?v=avwDj3KRuLc)
  - [Angular Basics (free book)](http://www.angularjsbook.com/) и [Your First Meteor Application (free book)](http://meteortips.com/)
 
