--- a/source/posts/2015/03-30-podcast-03-12.md.erb
+++ b/source/posts/2015/03-30-podcast-03-12.md.erb
@@ -20,6 +20,7 @@ main_image: "/images/static/03/0312.png"
  - [Upcoming changes in Rails 5.0](https://intercityup.com/blog/upcoming-changes-in-rails-5-0.html)
  - [Ruby Natural Language Processing Resources](https://github.com/diasks2/ruby-nlp)
  - [Revitalizing pg_morph](http://blog.lunarlogic.io/2015/playing-with-black-matter-continuation/)
+ - [Crono — a time-based background job scheduler daemon (just like Cron) for Rails](https://github.com/plashchynski/crono)
 
 ## JavaScript
 
