--- a/source/posts/2015/03-30-podcast-03-12.md.erb
+++ b/source/posts/2015/03-30-podcast-03-12.md.erb
@@ -21,6 +21,7 @@ main_image: "/images/static/03/0312.png"
  - [Ruby Natural Language Processing Resources](https://github.com/diasks2/ruby-nlp)
  - [Revitalizing pg_morph](http://blog.lunarlogic.io/2015/playing-with-black-matter-continuation/)
  - [Crono — a time-based background job scheduler daemon (just like Cron) for Rails](https://github.com/plashchynski/crono)
+ - [Using Docker to Parallelize Rails Tests](http://blog.codeship.com/using-docker-to-parallelize-rails-tests/)
 
 ## JavaScript
 
