--- a/source/posts/2015/03-30-podcast-03-12.md.erb
+++ b/source/posts/2015/03-30-podcast-03-12.md.erb
@@ -16,7 +16,7 @@ main_image: "/images/static/03/0312.png"
 
 ## Ruby
 
- - Релиз [ROM 0.6.0](http://rom-rb.org/blog/2015/03/23/rom-0-6-0-released/) и [Lotus 0.3.0](http://lotusrb.org/blog/2015/03/23/announcing-lotus-030.html)
+ - Релизы [Bundler 1.9](http://bundler.io/blog/2015/03/21/hello-bundler-19.html), [ROM 0.6.0](http://rom-rb.org/blog/2015/03/23/rom-0-6-0-released/) и [Lotus 0.3.0](http://lotusrb.org/blog/2015/03/23/announcing-lotus-030.html)
  - [Upcoming changes in Rails 5.0](https://intercityup.com/blog/upcoming-changes-in-rails-5-0.html)
  - [Ruby Natural Language Processing Resources](https://github.com/diasks2/ruby-nlp)
  - [Revitalizing pg_morph](http://blog.lunarlogic.io/2015/playing-with-black-matter-continuation/)
