--- a/source/posts/2015/03-30-podcast-03-12.md.erb
+++ b/source/posts/2015/03-30-podcast-03-12.md.erb
@@ -25,7 +25,10 @@ main_image: "/images/static/03/0312.png"
 
 ## JavaScript
 
+ - [IO.js 1.6](https://medium.com/node-js-javascript/io-js-1-6-release-1df38cf64e6c)
+ - [React Native published](http://facebook.github.io/react-native/)
  - [Type.js - typography tools for better web type](http://typejs.org/)
+ - [Intern - software testing for humans](https://theintern.github.io/)
 
 READMORE
 
