--- a/source/posts/2015/04-06-podcast-03-13.md.erb
+++ b/source/posts/2015/04-06-podcast-03-13.md.erb
@@ -16,9 +16,11 @@ main_image: "/images/static/03/0313.png"
 
 ## Ruby
 
+ - [Redis 3.0.0](https://github.com/antirez/redis/blob/3.0/00-RELEASENOTES)
  - [Customize Devise to Support Multitenancy Authentication](http://climber2002.github.io/blog/2015/03/29/customize-devise-to-support-subdomain-authentication/)
  - [GopherJS - build client side apps with the language you already trust on the backend](http://www.gopherjs.org/)
  - [How to write your own Caesar cipher encoder](http://www.blackbytes.info/2015/03/caesar-cipher-in-ruby/)
+ - [Debugging memory leaks in Ruby](http://samsaffron.com/archive/2015/03/31/debugging-memory-leaks-in-ruby)
 
 ## JavaScript
 
@@ -26,6 +28,7 @@ main_image: "/images/static/03/0313.png"
  - [JointJS - a modern HTML 5 JavaScript library for visualization and interaction with diagrams and graphs](http://jointjs.com/)
  - [Svidget - Rapidly build and deploy SVG Widgets](http://www.svidget.com/)
  - [Use Cases for Server Side Rendering](https://medium.com/@jeffwhelpley/use-cases-for-server-side-rendering-2fc6389b3f7d)
+ - [Loading CSS without blocking render](http://keithclark.co.uk/articles/loading-css-without-blocking-render/)
 
 READMORE
 
