--- a/source/posts/2015/04-06-podcast-03-13.md.erb
+++ b/source/posts/2015/04-06-podcast-03-13.md.erb
@@ -21,6 +21,7 @@ main_image: "/images/static/03/0313.png"
  - [GopherJS - build client side apps with the language you already trust on the backend](http://www.gopherjs.org/)
  - [How to write your own Caesar cipher encoder](http://www.blackbytes.info/2015/03/caesar-cipher-in-ruby/)
  - [Debugging memory leaks in Ruby](http://samsaffron.com/archive/2015/03/31/debugging-memory-leaks-in-ruby)
+ - [Bundler template moves bins to exe](http://bundler.io/blog/2015/03/20/moving-bins-to-exe.html)
 
 ## JavaScript
 
