--- a/source/posts/2015/04-06-podcast-03-13.md.erb
+++ b/source/posts/2015/04-06-podcast-03-13.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "13 выпуск 03 сезона.  и прочее"
+title: "13 выпуск 03 сезона. Crystal, Redis 3, Debugging memory leaks in Ruby, UglifyJS2, Primer, JointJS и прочее"
 date: 2015-04-06
 tags:
  - podcasts
@@ -16,20 +16,17 @@ main_image: "/images/static/03/0313.png"
 
 ## Ruby
 
- - [Redis 3.0.0](https://github.com/antirez/redis/blob/3.0/00-RELEASENOTES)
- - [Customize Devise to Support Multitenancy Authentication](http://climber2002.github.io/blog/2015/03/29/customize-devise-to-support-subdomain-authentication/)
- - [GopherJS - build client side apps with the language you already trust on the backend](http://www.gopherjs.org/)
- - [How to write your own Caesar cipher encoder](http://www.blackbytes.info/2015/03/caesar-cipher-in-ruby/)
- - [Debugging memory leaks in Ruby](http://samsaffron.com/archive/2015/03/31/debugging-memory-leaks-in-ruby)
- - [Bundler template moves bins to exe](http://bundler.io/blog/2015/03/20/moving-bins-to-exe.html)
+ - [Crystal - Ruby-Inspired Compiled Language](http://crystal-lang.org/) и [Redis 3.0.0](https://github.com/antirez/redis/blob/3.0/00-RELEASENOTES)
+ - [Debugging memory leaks in Ruby](http://samsaffron.com/archive/2015/03/31/debugging-memory-leaks-in-ruby), [Customize Devise to Support Multitenancy Authentication](http://climber2002.github.io/blog/2015/03/29/customize-devise-to-support-subdomain-authentication/) и [Bundler template moves bins to exe](http://bundler.io/blog/2015/03/20/moving-bins-to-exe.html)
+ - [How to write your own Caesar cipher encoder](http://www.blackbytes.info/2015/03/caesar-cipher-in-ruby/) и [Functional Ciphers in Ruby](https://robots.thoughtbot.com/functional-ciphers-in-ruby)
+ - [GopherJS - build client side apps with the language you already trust on the backend](http://www.gopherjs.org/), [Pollen - The book is a program](http://pollenpub.com/) и [Setting Up the BDD Stack on a New Rails 4 Application](https://semaphoreci.com/community/tutorials/setting-up-the-bdd-stack-on-a-new-rails-4-application)
 
 ## JavaScript
 
- - [Primer - the CSS toolkit and guidelines that power GitHub](http://primercss.io/)
- - [JointJS - a modern HTML 5 JavaScript library for visualization and interaction with diagrams and graphs](http://jointjs.com/)
- - [Svidget - Rapidly build and deploy SVG Widgets](http://www.svidget.com/)
- - [Use Cases for Server Side Rendering](https://medium.com/@jeffwhelpley/use-cases-for-server-side-rendering-2fc6389b3f7d)
- - [Loading CSS without blocking render](http://keithclark.co.uk/articles/loading-css-without-blocking-render/)
+ - [Building Custom React Native Components From Scratch](http://moduscreate.com/react_native_custom_components_ios/) и [Should you switch to UglifyJS2?](http://lisperator.net/blog/should-you-switch-to-uglifyjs2/)
+ - [Use Cases for Server Side Rendering](https://medium.com/@jeffwhelpley/use-cases-for-server-side-rendering-2fc6389b3f7d) и [Loading CSS without blocking render](http://keithclark.co.uk/articles/loading-css-without-blocking-render/)
+ - [Primer - the CSS toolkit and guidelines that power GitHub](http://primercss.io/) и [JointJS - a modern HTML 5 JavaScript library for visualization and interaction with diagrams and graphs](http://jointjs.com/)
+ - [SemVer Checker](http://semver.npmjs.com/) и [Svidget - Rapidly build and deploy SVG Widgets](http://www.svidget.com/)
 
 READMORE
 
