--- a/source/posts/2015/04-06-podcast-03-13.md.erb
+++ b/source/posts/2015/04-06-podcast-03-13.md.erb
@@ -23,7 +23,7 @@ main_image: "/images/static/03/0313.png"
 
 ## JavaScript
 
- - [Building Custom React Native Components From Scratch](http://moduscreate.com/react_native_custom_components_ios/) и [Should you switch to UglifyJS2?](http://lisperator.net/blog/should-you-switch-to-uglifyjs2/)
+ - [Building Custom React Native Components From Scratch](http://moduscreate.com/react_native_custom_components_ios/) и [Aesthetic Sass 1: Architecture and Style Organization](https://scotch.io/tutorials/aesthetic-sass-1-architecture-and-style-organization)
  - [Use Cases for Server Side Rendering](https://medium.com/@jeffwhelpley/use-cases-for-server-side-rendering-2fc6389b3f7d) и [Loading CSS without blocking render](http://keithclark.co.uk/articles/loading-css-without-blocking-render/)
  - [Primer - the CSS toolkit and guidelines that power GitHub](http://primercss.io/) и [JointJS - a modern HTML 5 JavaScript library for visualization and interaction with diagrams and graphs](http://jointjs.com/)
  - [SemVer Checker](http://semver.npmjs.com/) и [Svidget - Rapidly build and deploy SVG Widgets](http://www.svidget.com/)
