--- a/source/posts/2015/04-06-podcast-03-13.md.erb
+++ b/source/posts/2015/04-06-podcast-03-13.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "13 выпуск 03 сезона. Crystal, Redis 3, Debugging memory leaks in Ruby, UglifyJS2, Primer, JointJS и прочее"
+title: "13 выпуск 03 сезона. Crystal, Redis 3, Debugging memory leaks in Ruby, Aesthetic Sass, Primer, JointJS и прочее"
 date: 2015-04-06
 tags:
  - podcasts
