--- a/source/posts/2015/04-13-podcast-03-14.md.erb
+++ b/source/posts/2015/04-13-podcast-03-14.md.erb
@@ -21,6 +21,8 @@ main_image: "/images/static/03/0314.png"
  - [Awesome Ruby - a collection of awesome Ruby libraries, tools, frameworks and software](http://awesome-ruby.com/)
  - [Ruby Metaprogramming - Method Missing](http://www.leighhalliday.com/ruby-metaprogramming-method-missing)
  - [Template Method Pattern in Ruby](http://rubylogs.com/template-method-pattern-in-ruby/)
+ - [Why is Rubygems slow?](http://www.sitepoint.com/rubygems-slow/)
+ - [Elixir: Come for the syntax, stay for everything else](http://reefpoints.dockyard.com/2015/04/08/elixir-come-for-the-syntax-stay-for-everything-else.html)
  - [Documenting Your Code](http://6ftdan.com/allyourdev/2015/04/08/documenting-your-code/)
  - [Kartograph - serialization/deserialization library](https://github.com/digitalocean/kartograph)
  - [Rubype - gradual type checking for Ruby](https://github.com/gogotanaka/Rubype)
@@ -38,6 +40,7 @@ main_image: "/images/static/03/0314.png"
  - [An Introduction to the CSS will-change Property](http://www.sitepoint.com/introduction-css-will-change-property/)
  - [BEM 101](https://css-tricks.com/bem-101/)
  - [Let Links Be Links](http://alistapart.com/article/let-links-be-links)
+ - [Fixing the 'Blank Text' Problem](https://www.igvita.com/2015/04/10/fixing-the-blank-text-problem/)
 
 
 READMORE
