--- a/source/posts/2015/04-13-podcast-03-14.md.erb
+++ b/source/posts/2015/04-13-podcast-03-14.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "14 выпуск 03 сезона.  и прочее"
+title: "14 выпуск 03 сезона. Ruboto 1.3.0, Awesome Ruby, Kartograph, Polymer 0.8, What is Virtual DOM, BEM 101 и прочее"
 date: 2015-04-13
 tags:
  - podcasts
@@ -16,31 +16,17 @@ main_image: "/images/static/03/0314.png"
 
 ## Ruby
 
- - [MongoDB Ruby Driver 2.0](https://www.mongodb.com/blog/post/announcing-ruby-driver-20-rewrite)
- - [Ruboto 1.3.0](http://ruboto.org/news/2015/04/05/Ruboto-1.3.0-release-doc.html)
- - [Awesome Ruby - a collection of awesome Ruby libraries, tools, frameworks and software](http://awesome-ruby.com/)
- - [Ruby Metaprogramming - Method Missing](http://www.leighhalliday.com/ruby-metaprogramming-method-missing)
- - [Template Method Pattern in Ruby](http://rubylogs.com/template-method-pattern-in-ruby/)
- - [Why is Rubygems slow?](http://www.sitepoint.com/rubygems-slow/)
- - [Elixir: Come for the syntax, stay for everything else](http://reefpoints.dockyard.com/2015/04/08/elixir-come-for-the-syntax-stay-for-everything-else.html)
- - [Documenting Your Code](http://6ftdan.com/allyourdev/2015/04/08/documenting-your-code/)
- - [Kartograph - serialization/deserialization library](https://github.com/digitalocean/kartograph)
- - [Rubype - gradual type checking for Ruby](https://github.com/gogotanaka/Rubype)
+ - [MongoDB Ruby Driver 2.0](https://www.mongodb.com/blog/post/announcing-ruby-driver-20-rewrite), [Ruboto 1.3.0](http://ruboto.org/news/2015/04/05/Ruboto-1.3.0-release-doc.html) и [Awesome Ruby - a collection of awesome Ruby libraries, tools, frameworks and software](http://awesome-ruby.com/)
+ - [Elixir: Come for the syntax, stay for everything else](http://reefpoints.dockyard.com/2015/04/08/elixir-come-for-the-syntax-stay-for-everything-else.html) и [Template Method Pattern in Ruby](http://rubylogs.com/template-method-pattern-in-ruby/)
+ - [Why is Rubygems slow?](http://www.sitepoint.com/rubygems-slow/) и [Ruby Metaprogramming - Method Missing](http://www.leighhalliday.com/ruby-metaprogramming-method-missing)
+ - [Documenting Your Code](http://6ftdan.com/allyourdev/2015/04/08/documenting-your-code/), [Kartograph - serialization/deserialization library](https://github.com/digitalocean/kartograph) и [Rubype - gradual type checking for Ruby](https://github.com/gogotanaka/Rubype)
 
 ## JavaScript
 
- - [Polymer 0.8](https://www.polymer-project.org/0.8/) ([video](https://www.youtube.com/watch?v=cyf-17lWkYE))
- - [Airbnb JavaScript Style Guide](https://github.com/airbnb/javascript/tree/es6)
- - [The Rise of TypeScript?](http://developer.telerik.com/featured/the-rise-of-typescript/)
- - [What is Virtual DOM](http://tonyfreed.com/blog/what_is_virtual_dom)
- - [Why Backbone.js and ES6 Classes Don't Mix](http://benmccormick.org/2015/04/07/es6-classes-and-backbone-js/)
- - [Sync Ninja: Build real-time apps without any server infrastructure](http://www.syncninja.com/)
- - [iOS 8 insidious length bug breaks jQuery and Underscore object iteration](http://firstdoit.com/ios-8-insidious-length-bug-on-jquery-and-underscore-each-map/)
- - [Starting a Refactor with CSS Dig](https://css-tricks.com/starting-a-refactor-with-css-dig/)
- - [An Introduction to the CSS will-change Property](http://www.sitepoint.com/introduction-css-will-change-property/)
- - [BEM 101](https://css-tricks.com/bem-101/)
- - [Let Links Be Links](http://alistapart.com/article/let-links-be-links)
- - [Fixing the 'Blank Text' Problem](https://www.igvita.com/2015/04/10/fixing-the-blank-text-problem/)
+ - [Polymer 0.8](https://www.polymer-project.org/0.8/) ([video](https://www.youtube.com/watch?v=cyf-17lWkYE)), [Why Backbone.js and ES6 Classes Don't Mix](http://benmccormick.org/2015/04/07/es6-classes-and-backbone-js/) и [iOS 8 insidious length bug breaks jQuery and Underscore object iteration](http://firstdoit.com/ios-8-insidious-length-bug-on-jquery-and-underscore-each-map/)
+ - [The Rise of TypeScript?](http://developer.telerik.com/featured/the-rise-of-typescript/), [What is Virtual DOM](http://tonyfreed.com/blog/what_is_virtual_dom) и [Airbnb JavaScript Style Guide](https://github.com/airbnb/javascript/tree/es6)
+ - [BEM 101](https://css-tricks.com/bem-101/), [Starting a Refactor with CSS Dig](https://css-tricks.com/starting-a-refactor-with-css-dig/) и [An Introduction to the CSS will-change Property](http://www.sitepoint.com/introduction-css-will-change-property/)
+ - [Let Links Be Links](http://alistapart.com/article/let-links-be-links) и [Fixing the 'Blank Text' Problem](https://www.igvita.com/2015/04/10/fixing-the-blank-text-problem/)
 
 
 READMORE
