--- a/source/posts/2015/04-13-podcast-03-14.md.erb
+++ b/source/posts/2015/04-13-podcast-03-14.md.erb
@@ -24,7 +24,7 @@ main_image: "/images/static/03/0314.png"
 ## JavaScript
 
  - [Polymer 0.8](https://www.polymer-project.org/0.8/) ([video](https://www.youtube.com/watch?v=cyf-17lWkYE)), [Why Backbone.js and ES6 Classes Don't Mix](http://benmccormick.org/2015/04/07/es6-classes-and-backbone-js/) и [iOS 8 insidious length bug breaks jQuery and Underscore object iteration](http://firstdoit.com/ios-8-insidious-length-bug-on-jquery-and-underscore-each-map/)
- - [The Rise of TypeScript?](http://developer.telerik.com/featured/the-rise-of-typescript/), [What is Virtual DOM](http://tonyfreed.com/blog/what_is_virtual_dom) и [Airbnb JavaScript Style Guide](https://github.com/airbnb/javascript/tree/es6)
+ - [The Rise of TypeScript?](http://developer.telerik.com/featured/the-rise-of-typescript/) и [What is Virtual DOM](http://tonyfreed.com/blog/what_is_virtual_dom)
  - [BEM 101](https://css-tricks.com/bem-101/), [Starting a Refactor with CSS Dig](https://css-tricks.com/starting-a-refactor-with-css-dig/) и [An Introduction to the CSS will-change Property](http://www.sitepoint.com/introduction-css-will-change-property/)
  - [Let Links Be Links](http://alistapart.com/article/let-links-be-links) и [Fixing the 'Blank Text' Problem](https://www.igvita.com/2015/04/10/fixing-the-blank-text-problem/)
 
