--- a/source/posts/2014/02-09-podcast-02-05.md.erb
+++ b/source/posts/2014/02-09-podcast-02-05.md.erb
@@ -28,7 +28,7 @@ main_image: "/images/static/02/0205.png"
 
  - [Angular, Ember, And Backbone: Which JavaScript Framework Is Right For You?](http://readwrite.com/2014/02/06/angular-backbone-ember-best-javascript-framework-for-you)
  - [7 Minimal Node.js Web Frameworks for 2014 and Beyond](http://codecondo.com/7-minimal-node-js-web-frameworks/)
- - [Yet Another Framework Syndrome (YAFS)](http://blog.tastejs.com/yet-another-framework-syndrome-yafs)
+ - [Yet Another Framework Syndrome (YAFS)](https://medium.com/@tastejs/yet-another-framework-syndrome-yafs-cf5f694ee070)
  - [Vue.js - MVVM Made Simple](http://vuejs.org/) and [TodoMVC Benchmark](http://vuejs.org/perf/)
  - [L20n - a new localization framework developed by Mozilla for the Web](http://l20n.org/)
  - [Bonsai.js](http://bonsaijs.org/) and [Joint.js](http://www.jointjs.com/)
