--- a/source/posts/2015/04-20-podcast-03-15.md.erb
+++ b/source/posts/2015/04-20-podcast-03-15.md.erb
@@ -21,6 +21,8 @@ main_image: "/images/static/03/0315.png"
  - [RethinkDB 2.0](http://rethinkdb.com/blog/2.0-release/)
  - [Elegant tests with Truth Tables](http://brewhouse.io/blog/2015/04/13/elegant-tests-with-truth-tables.html)
  - [Redis cluster. Quick overview](http://ilyabylich.svbtle.com/redis-cluster-quick-overview)
+ - [Kubernetes - manage a cluster of Linux containers as a single system to accelerate Dev and simplify Ops](http://kubernetes.io/)
+ - [Transproc - transform Ruby objects in functional style](http://solnic.github.io/transproc/)
  - [Ensnare - rubygem for Ruby on Rails which allow configuring a basic malicious behavior detection and response scheme](https://github.com/ahoernecke/ensnare)
  - [Gemput - freezing Gemfile](https://github.com/stompesi/gemput)
 
