--- a/source/posts/2015/04-20-podcast-03-15.md.erb
+++ b/source/posts/2015/04-20-podcast-03-15.md.erb
@@ -31,6 +31,8 @@ main_image: "/images/static/03/0315.png"
  - [Npm Private Modules](https://www.npmjs.com/private-modules)
  - [Amok - No Reload Live Editing for JavaScript](http://amokjs.com/)
  - [You’re Optimizing The Wrong Things](http://ericleads.com/2013/04/youre-optimizing-the-wrong-things/)
+ - [The mind-boggling universe of JavaScript Module strategies](https://www.airpair.com/javascript/posts/the-mind-boggling-universe-of-javascript-modules)
+ - [You Don't Know JS (book series)](https://github.com/getify/You-Dont-Know-JS)
 
 READMORE
 
