Changed AC public pages

--- a/source/static_pages/about.html.erb
+++ b/source/static_pages/about.html.erb
@@ -27,11 +27,11 @@ title: "О нас"
   <div class="bio">
     <h1 class="mbm">Александр Чаплинский</h1>
     <div class="contacts">
-      <a class="icon-twitter" href="https://twitter.com/a1chapone" target="_blank"></a>
+      <a class="icon-twitter" href="https://twitter.com/alchaplinsky" target="_blank"></a>
       <a class="icon-github" href="https://github.com/alchapone" target="_blank"></a>
       <a class="icon-linkedin" href="http://www.linkedin.com/pub/alexander-chaplinsky/34/2a3/3a0" target="_blank"></a>
       <a class="icon-facebook" href="http://www.facebook.com/profile.php?id=1433185383" target="_blank"></a>
-      <a class="icon-instagramm" href="http://instagram.com/a1chapone" target="_blank"></a>
+      <a class="icon-instagramm" href="http://instagram.com/alchaplinsky" target="_blank"></a>
     </div>
     <p>Ruby on Rails, JavaScript разработчик и cпециалист по верстке в компании Railsware.
       Является автором таких продуктов как: <a href="https://github.com/alchapone/polymer-rails">polymer-rails</a>,
