--- a/source/posts/2015/04-20-podcast-03-15.md.erb
+++ b/source/posts/2015/04-20-podcast-03-15.md.erb
@@ -22,6 +22,7 @@ main_image: "/images/static/03/0315.png"
  - [Elegant tests with Truth Tables](http://brewhouse.io/blog/2015/04/13/elegant-tests-with-truth-tables.html)
  - [Redis cluster. Quick overview](http://ilyabylich.svbtle.com/redis-cluster-quick-overview)
  - [Kubernetes - manage a cluster of Linux containers as a single system to accelerate Dev and simplify Ops](http://kubernetes.io/)
+ - [Ruby Fun Box - a handful of basic ruby problems with solutions](http://rubyfunbox.com/)
  - [Transproc - transform Ruby objects in functional style](http://solnic.github.io/transproc/)
  - [Ensnare - rubygem for Ruby on Rails which allow configuring a basic malicious behavior detection and response scheme](https://github.com/ahoernecke/ensnare)
  - [Gemput - freezing Gemfile](https://github.com/stompesi/gemput)
@@ -32,7 +33,12 @@ main_image: "/images/static/03/0315.png"
  - [Amok - No Reload Live Editing for JavaScript](http://amokjs.com/)
  - [You’re Optimizing The Wrong Things](http://ericleads.com/2013/04/youre-optimizing-the-wrong-things/)
  - [The mind-boggling universe of JavaScript Module strategies](https://www.airpair.com/javascript/posts/the-mind-boggling-universe-of-javascript-modules)
+ - [Change And Its Detection In JavaScript Frameworks](http://teropa.info/blog/2015/03/02/change-and-its-detection-in-javascript-frameworks.html)
+ - [Image Formats: the nerdy parts](https://speakerdeck.com/lara/image-formats-the-nerdy-parts)
+ - [Highland.js - the high-level streams library for Node.js and the browser](http://highlandjs.org/)
  - [You Don't Know JS (book series)](https://github.com/getify/You-Dont-Know-JS)
+ - [Learn JS Data: Data manipulation, munging, and processing in JavaScript](http://learnjsdata.com/)
+ - [RapydScript - pythonic JavaScript that doesn't suck](http://www.rapydscript.com/)
 
 READMORE
 
