--- a/source/posts/2015/05-03-podcast-03-16.md.erb
+++ b/source/posts/2015/05-03-podcast-03-16.md.erb
@@ -27,6 +27,7 @@ main_image: "/images/static/03/0316.png"
 ## JavaScript
 
  - [JSBlocks - faster than AngularJS and ReactJS](http://jsblocks.com/)
+ - [Atom Shell is now Electron](http://electron.atom.io/)
  - [Meteor Postgres](http://www.meteorpostgres.com/)
  - [Egg.js - a Simple Way to add Easter Eggs to your site](http://thatmikeflynn.com/egg.js/)
  - [Drag and Drop in React](http://blog.tryolabs.com/2015/04/21/drag-and-drop-in-react/)
