--- a/source/posts/2015/04-28-podcast-03-16.md.erb
+++ b/source/posts/2015/04-28-podcast-03-16.md.erb
@@ -1,13 +1,13 @@
 ---
 title: "16 выпуск 03 сезона. Videos of RailsConf 2015 talks, Behavior-driven development, Electron, JSBlocks, ITCSS и прочее"
-date: 2015-04-27
+date: 2015-04-28
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/102/file/podfm_rwpod_my_15_102.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/03.15/0315.mp3"
+audio_url: "http://rwpod.podfm.ru/my/103/file/podfm_rwpod_my_16_103.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/03.16/0316.mp3"
 audio_format: "audio/mpeg"
-audio_length: 51101794
-duration: "00:53:07"
+audio_length: 60237794
+duration: "01:02:38"
 small_icon: mic
 main_image: "/images/static/03/0316.png"
 ---
@@ -25,7 +25,7 @@ main_image: "/images/static/03/0316.png"
 
  - [Atom Shell is now Electron](http://electron.atom.io/) и [JSBlocks - faster than AngularJS and ReactJS](http://jsblocks.com/)
  - [Manage large-scale web projects with new CSS architecture ITCSS](http://www.creativebloq.com/web-design/manage-large-scale-web-projects-new-css-architecture-itcss-41514731), [Penguin — легкий и расширяемый стартовый набор для фронтенд-разработчика](http://penguin.docs.bqws.io/) и [Meteor Postgres](http://www.meteorpostgres.com/)
- - [React Native Fundamentals](https://egghead.io/series/react-native-fundamentals), [Drag and Drop in React](http://blog.tryolabs.com/2015/04/21/drag-and-drop-in-react/) и [Nuka - Pure ReactJS carousel component](http://kenwheeler.github.io/nuka-carousel/)
+ - [React Native Fundamentals](https://egghead.io/series/react-native-fundamentals) ([videos](http://www.ex.ua/view/89905005)), [Drag and Drop in React](http://blog.tryolabs.com/2015/04/21/drag-and-drop-in-react/) и [Nuka - Pure ReactJS carousel component](http://kenwheeler.github.io/nuka-carousel/)
  - [FOAM Framework](http://foam-framework.github.io/foam/) и [Egg.js - a Simple Way to add Easter Eggs to your site](http://thatmikeflynn.com/egg.js/)
 
 READMORE
