--- a/source/posts/2015/05-04-podcast-03-17.md.erb
+++ b/source/posts/2015/05-04-podcast-03-17.md.erb
@@ -1,6 +1,6 @@
 ---
 title: "17 выпуск 03 сезона. JRuby 9.0.0.0-pre2, Better Persistence with ROM, HTTP2, Build 2015, Vorlon.JS, Clusterize.js и прочее"
-date: 2015-05-03
+date: 2015-05-04
 tags:
  - podcasts
 audio_url: "http://rwpod.podfm.ru/my/103/file/podfm_rwpod_my_16_103.mp3"
@@ -19,7 +19,7 @@ main_image: "/images/static/03/0317.png"
  - [JRuby 9.0.0.0-pre2 Released](http://jruby.org/2015/04/28/jruby-9-0-0-0-pre2.html), [Fixing a slow Rails development server](http://brewhouse.io/blog/2015/04/27/fixing-a-slow-rails-development-server.html) и [Secure Tokens From Rails 5 to Rails 4.x and 3.x](https://coderwall.com/p/kb97gg/secure-tokens-from-rails-5-to-rails-4-x-and-3-x)
  - [Better Persistence with ROM](http://hawkins.io/2015/04/better-persistence-with-rom/), [Denoising AutoEncoders in Ruby](http://www.rubylab.io/2015/04/28/denoising-autoencoder-tutorial/) и [Ruby Network Programming](http://www.blackbytes.info/2015/04/ruby-network-programming/)
  - [On my radar: RethinkDB + React.js + Rails](http://blog.arkency.com/2015/04/on-my-radar-rethinkdb-plus-react-dot-js-plus-rails/) и [Having fun with Opal and Sprockets](http://fazibear.github.io/blog/2015/04/29/having-fun-with-opal-and-sprockets/)
- - [How to write RSpec formatters from scratch](http://rubylogs.com/how-to-write-rspec-formatters-from-scratch/) и [HTTP2 in 5 Minutes (video)](https://www.youtube.com/watch?v=fJ0C4zN5uOQ)
+ - [How to write RSpec formatters from scratch](http://rubylogs.com/how-to-write-rspec-formatters-from-scratch/), [Awesome-ActiveRecord - a collection of awesome ActiveRecord goodies, libraries, tools, extensions, guides](https://github.com/planetruby/awesome-activerecord) и [HTTP2 in 5 Minutes (video)](https://www.youtube.com/watch?v=fJ0C4zN5uOQ)
 
 ## JavaScript
 
