--- a/source/posts/2015/05-11-podcast-03-18.md.erb
+++ b/source/posts/2015/05-11-podcast-03-18.md.erb
@@ -20,10 +20,17 @@ main_image: "/images/static/03/0318.png"
  - [Integrate Rubocop in your workflow](https://intercityup.com/blog/integrate-rubocop-in-your-workflow.html)
  - [Lupa - simple, robust and scaleable search filters with ease using regular Ruby classes and object oriented design patterns](https://github.com/edelpero/lupa)
  - [Rust v Crystal "Hello world" benchmark](https://gist.github.com/Synatra/33929cc8c0800dc9739c)
+ - [Minitest::Benchmark: A Practical Example](http://chriskottom.com/blog/2015/05/minitest-benchmark-a-practical-example/)
+ - [How Ruby gems work on the command line](https://tomdebruijn.com/posts/gems-on-the-command-line/)
+ - [An open letter to Matz on Ruby type systems](http://tonyarcieri.com/an-open-letter-to-matz-on-ruby-type-systems)
+ - [Making Fruity Bat (a Flappy Bird clone) in Ruby](http://www.tomdalling.com/blog/ruby/fruity-bat-flappy-bird-clone-in-ruby/)
+ - [How to store emoji in a Rails app with a MySQL database](https://blog.arkency.com/2015/05/how-to-store-emoji-in-a-rails-app-with-a-mysql-database/)
+ - [Examples of Ruby Patterns](https://github.com/TheBlasfem/ruby-patterns)
+ - [Problems with nil and how to avoid them](http://blog.ragnarson.com/2015/05/06/problems-with-nil.html)
 
 ## JavaScript
 
-
+ - [Mozilla объявляет устаревшим HTTP](https://blog.mozilla.org/security/files/2015/05/HTTPS-FAQ.pdf)
 
 READMORE
 
