--- a/source/posts/2015/05-11-podcast-03-18.md.erb
+++ b/source/posts/2015/05-11-podcast-03-18.md.erb
@@ -27,10 +27,14 @@ main_image: "/images/static/03/0318.png"
  - [How to store emoji in a Rails app with a MySQL database](https://blog.arkency.com/2015/05/how-to-store-emoji-in-a-rails-app-with-a-mysql-database/)
  - [Examples of Ruby Patterns](https://github.com/TheBlasfem/ruby-patterns)
  - [Problems with nil and how to avoid them](http://blog.ragnarson.com/2015/05/06/problems-with-nil.html)
+ - [Ruby Warrior - a fun way to learn Ruby the interactive way](https://www.bloc.io/ruby-warrior/#/)
 
 ## JavaScript
 
  - [Mozilla объявляет устаревшим HTTP](https://blog.mozilla.org/security/files/2015/05/HTTPS-FAQ.pdf)
+ - [NativeScript 1.0.0](https://www.nativescript.org/blog/nativescript-1.0.0-is-now-available)
+ - [Iconate.js - transform your icons with animations](http://bitshadow.github.io/iconate/)
+ - [Lovefield - a cross-browser, SQL-like, relational query engine for Web in pure JavaScript](https://github.com/google/lovefield)
 
 READMORE
 
