--- a/source/posts/2015/05-11-podcast-03-18.md.erb
+++ b/source/posts/2015/05-11-podcast-03-18.md.erb
@@ -25,8 +25,8 @@ main_image: "/images/static/03/0318.png"
 
  - [Mozilla объявляет устаревшим HTTP](https://blog.mozilla.org/security/files/2015/05/HTTPS-FAQ.pdf), [NativeScript 1.0.0](https://www.nativescript.org/blog/nativescript-1.0.0-is-now-available) и [Angular 2.0 Running in a native mobile app using NativeScript](https://www.nativescript.org/blog/details/angular-2.0-running-in-a-native-mobile-app-using-nativescript)
  - [What's new in io.js 2.0.0](https://www.codeschool.com/blog/2015/05/08/whats-new-in-io-js-2-0-0/), [An introduction to JavaScript-based DDoS](https://blog.cloudflare.com/an-introduction-to-javascript-based-ddos/) и [Inline SVG fallback without JavaScript; Take 2](http://codepen.io/Tigt/blog/inline-svg-fallback-without-javascript-take-2)
- - [Spellbook](http://drewbarontini.com/articles/spellbook/), [Replaying bugs with Flux](https://medium.com/@nextminds/replaying-bugs-with-flux-52f6bd8c8307) и [8 ways to be the perfect web developer](http://www.developerdrive.com/2015/04/8-ways-to-be-the-perfect-web-developer/)
- - [Lovefield - a cross-browser, SQL-like, relational query engine for Web in pure JavaScript](https://github.com/google/lovefield) и [Iconate.js - transform your icons with animations](http://bitshadow.github.io/iconate/)
+ - [The React.js Way: Flux Architecture with Immutable.js](http://blog.risingstack.com/the-react-js-way-flux-architecture-with-immutable-js/), [Replaying bugs with Flux](https://medium.com/@nextminds/replaying-bugs-with-flux-52f6bd8c8307) и [8 ways to be the perfect web developer](http://www.developerdrive.com/2015/04/8-ways-to-be-the-perfect-web-developer/)
+ - [The core concepts of Angular 2](http://victorsavkin.com/post/118372404541/the-core-concepts-of-angular-2), [Lovefield - a cross-browser, SQL-like, relational query engine for Web in pure JavaScript](https://github.com/google/lovefield) и [Iconate.js - transform your icons with animations](http://bitshadow.github.io/iconate/)
 
 READMORE
 
