--- a/source/posts/2015/05-18-podcast-03-19.md.erb
+++ b/source/posts/2015/05-18-podcast-03-19.md.erb
@@ -16,11 +16,25 @@ main_image: "/images/static/03/0319.png"
 
 ## Ruby
 
- - [Критика языка Rust и почему C/C++ никогда не умрет](http://eax.me/cpp-will-never-die/)
+ - [Rust 1.0](http://blog.rust-lang.org/2015/05/15/Rust-1.0.html) и [Критика языка Rust и почему C/C++ никогда не умрет](http://eax.me/cpp-will-never-die/)
+ - [The Art of Programming](https://medium.com/art-of-programming/the-creative-programmer-2dde54f83e3a)
+ - [How to update large tables in PostgreSQL](http://blog.codacy.com/2015/05/14/how-to-update-large-tables-in-postgresql/)
+ - [Immutable Iterators with Tom Stuart](http://devblog.avdi.org/2015/05/14/new-rubytapas-freebie-immutable-iterators-with-tom-stuart/)
+ - [Functional Programming dictionary with Ruby](https://medium.com/@KamilLelonek/functional-programming-dictionary-with-ruby-38e39b3ddcba)
+ - [Encrypting secrets with Rails](http://cookieshq.co.uk/posts/encrypting-secrets-with-rails/)
+ - [Gush - easily run complex workflows in parallel with Sidekiq](https://github.com/pokonski/gush)
+ - [Timeout: Ruby's Most Dangerous API](http://www.mikeperham.com/2015/05/08/timeout-rubys-most-dangerous-api/)
+ - [Linux Isolation Basics](https://blog.engineyard.com/2015/linux-containers-isolation)
+ - [10 Advanced Features of Regex in Ruby](http://idiosyncratic-ruby.com/11-regular-extremism.html)
 
 ## JavaScript
 
+ - [Backbone.js 1.2.0](http://backbonejs.org/#changelog)
+ - [Node.js and io.js are merging under the Node Foundation](http://www.infoq.com/news/2015/05/nodejs-iojs)
  - [Pintsize - a Sass front end template](http://pintsize.io/)
+ - [Justice.js - a performance metric bar with a streaming FPS graph](http://okor.github.io/justice/)
+ - [Watermark.js - a functional ES6 library for watermarking in the browser](http://brianium.github.io/watermarkjs/)
+ - [Facey Face](http://gabetaubman.com/projects/faces/)
 
 READMORE
 
